feature: adding elb resources for proxy server.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Alpn",
         "architecting",
         "bbbbafd",
         "boto",
@@ -11,6 +12,7 @@
         "dfdc",
         "eaefed",
         "ecfdcb",
+        "Elbv",
         "getenv",
         "hashlib",
         "hexdigest",
