feature: adding elb resources for proxy server.

--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -587,9 +587,9 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties: 
       IpAddressType: "ipv4"
-      LoadBalancerAttributes: 
-      - Key: "load_balancing.cross_zone.enabled"
-        Value: "true"
+      # LoadBalancerAttributes: 
+      # - Key: "load_balancing.cross_zone.enabled"
+      #   Value: "true"
       Name: "ProxyServerElbv2"
       Scheme: "internal"
       SecurityGroups: 
