feat: adding name tags for VPC's

--- a/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3000_vpc_setup.yaml
@@ -66,6 +66,8 @@ Resources:
       Tags: 
         - Key: "Public"
           Value: "FALSE"
+        - Key: "Name"
+          Value: "PrivateVpc"
 
   PrivateVpcSubnet1:
     Type: AWS::EC2::Subnet
@@ -127,6 +129,8 @@ Resources:
       Tags: 
         - Key: "Public"
           Value: "TRUE"
+        - Key: "Name"
+          Value: "PublicVpc"
 
   PublicVpcInternetGateway:
     Type: AWS::EC2::InternetGateway
