refactor: updated values for DNS and ACM stack

--- a/labs/lab3-non-kinesis-example/cloudformation/3100_dns_and_certificate.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3100_dns_and_certificate.yaml
@@ -14,7 +14,7 @@ Parameters:
   PrivateDnsNameParam:
     Type: String
     Description: "Domain name of the Private DNS Hosted Zone"
-    Default: "example.eu-central-1.tld"
+    Default: "lab.eu-central-1.tld"
   VpcStackNameParam:
     Type: String
     Description: "The name of the VPC stack, in order to import values"
