--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -350,9 +350,6 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties: 
       IpAddressType: "ipv4"
-      # LoadBalancerAttributes: 
-      # - Key: "load_balancing.cross_zone.enabled"
-      #   Value: "true"
       Name: "ProxyServerElbv2"
       Scheme: "internal"
       SecurityGroups: 
@@ -369,24 +366,12 @@ Resources:
   ProxyServerElbv2Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties: 
-      AlpnPolicy: 
-      - "ELBSecurityPolicy-TLS-1-2-Ext-2018-06"
-      - "ELBSecurityPolicy-TLS-1-2-2017-01"
-      - "ELBSecurityPolicy-TLS13-1-2-2021-06"
-      - "ELBSecurityPolicy-TLS13-1-2-Res-2021-06"
-      - "ELBSecurityPolicy-TLS13-1-2-Ext1-2021-06"
-      - "ELBSecurityPolicy-TLS13-1-2-Ext2-2021-06"
-      Certificates: 
-      - CertificateArn:
-          Fn::ImportValue:
-            !Sub "${VpcStackNameParam}-PrivateDnsAcmCertificateId"
       DefaultActions: 
       - Type: "forward"
         TargetGroupArn: !Ref ProxyServerElbv2TargetGroup
       LoadBalancerArn: !Ref ProxyServerElbv2
-      Port: 443
-      Protocol: "HTTPS"
-      SslPolicy: "ELBSecurityPolicy-2016-08"
+      Port: 8080
+      Protocol: "HTTP"
 
 # Outputs:
 
