--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -324,9 +324,9 @@ Resources:
       MinSize: "1"
       NewInstancesProtectedFromScaleIn: false
       VPCZoneIdentifier: 
-        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1"
-        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2"
-        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3"
+        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet1Id"
+        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet2Id"
+        - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
       TargetGroupARNs: 
       - !Ref ProxyServerElbv2TargetGroup
 
@@ -356,11 +356,11 @@ Resources:
       - !Ref ProxyServerElbv2SecurityGroup
       SubnetMappings: 
       - SubnetId:
-          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1"
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet1Id"
       - SubnetId:
-          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2"
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet2Id"
       - SubnetId:
-          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3"
+          Fn::ImportValue: !Sub "${VpcStackNameParam}-PrivateVpcSubnet3Id"
       Type: "application"
   
   ProxyServerElbv2Listener:
