refactor: added tags to proxy launch template

--- a/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/3200_proxy_server.yaml
@@ -292,6 +292,12 @@ Resources:
               systemctl start squid
 
               --==BOUNDARY==--
+      TagSpecifications: 
+      - ResourceType: "instance"
+        Tags: 
+          - Key: "Role"
+            Value: "proxy-server"
+
 
   ProxyServerElbv2TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -331,6 +337,11 @@ Resources:
         - Fn::ImportValue: !Sub "${VpcStackNameParam}-PublicVpcSubnet3Id"
       TargetGroupARNs: 
       - !Ref ProxyServerElbv2TargetGroup
+      Tags: 
+      - Key: "Name"
+        PropagateAtLaunch: true
+        Value: "internet-proxy"
+
 
   ProxyServerElbv2SecurityGroup:
     Type: AWS::EC2::SecurityGroup
