feature: creating the stack to sync website static file changes to FSX

--- a/labs/lab3-non-kinesis-example/cloudformation/4100_github_secret.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4100_github_secret.yaml
@@ -55,11 +55,11 @@ Resources:
       Name: "GitHubSecret"
       SecretString: !Ref SshKeyDataParam
 
-# Outputs:
+Outputs:
 
-#   StaticWebRootFsxFilesystemId:
-#     Description: "ID for StaticWebRootFsxFilesystem"
-#     Value: !Ref StaticWebRootFsxFilesystem
-#     Export:
-#       Name: !Sub "${AWS::StackName}-StaticWebRootFsxFilesystemId"
+  GitHubSecretArn:
+    Description: "ARN for GitHubSecret"
+    Value: !Ref GitHubSecret
+    Export:
+      Name: !Sub "${AWS::StackName}-GitHubSecretArn"
 
