--- a/labs/lab3-non-kinesis-example/cloudformation/4100_github_secret.yaml
+++ b/labs/lab3-non-kinesis-example/cloudformation/4100_github_secret.yaml
@@ -3,27 +3,6 @@ AWSTemplateFormatVersion: "2010-09-09"
 
 Description: "This stack creates a Secrets Manager secret for holding the SSH key required to access GitHub."
 
-# Metadata:
-#   template metadata
-
-Parameters:
-  SshKeyDataParam:
-    Type: String
-    Description: "The SSH key data"
-  
-
-# Rules:
-#   set of rules
-
-# Mappings:
-#   set of mappings
-
-# Conditions:
-#   set of conditions
-
-# Transform:
-#   set of transforms
-
 Resources:
 
   GitHubSecretKmsKey:
@@ -53,7 +32,7 @@ Resources:
       Description: "Secret for storing the GitHub SSH Key"
       KmsKeyId: !Ref GitHubSecretKmsKey
       Name: "GitHubSecret"
-      SecretString: !Ref SshKeyDataParam
+      SecretString: "Value to be replaced"
 
 Outputs:
 
